--- a/neon/backends/kernels/sass/hconv_xprop_X32_N128.sass
+++ b/neon/backends/kernels/sass/hconv_xprop_X32_N128.sass
@@ -83,7 +83,7 @@
     72-91   : cs<0-7>, b<0-7>, c<0-3>
     92-93   : Out<0-1>
     94-95   : Sum<0-1>
-    96-140  ~ writeCs, readCs, alpha, beta, flags, tidOX, tidOY, to, k, n, MPQN, MPQN1, MPQN4, MPQN12, sum<0-3>
+    96-140  ~ writeCs, readCs, alpha, beta, flags, tidOX, tidOX63, tidOY, to, k, n, MPQN, MPQN1, MPQN4, MPQN12, sum<0-3>
 
 </REGISTER_MAPPING>
 
@@ -307,7 +307,7 @@ LOOP:
 --:-:-:-:1      ISCADD k, blkF, tidOY, 5;
 --:-:-:-:1      IADD   k, k, param_offset_K;
 
-[+ output_setup() +]
+[+ output_setup(63) +]
 
 </SCHEDULE_BLOCK>
 
