--- a/neon/backends/kernels/sass/hconv_xprop_X64_N128.sass
+++ b/neon/backends/kernels/sass/hconv_xprop_X64_N128.sass
@@ -83,7 +83,7 @@
     74-75   : Out<0-1>
     76-95   : cs<0-7>, b<0-7>, c<0-3>
     96-97   : Sum<0-1>
-    98-124  ~ writeCs, readCs, alpha, beta, flags, tidOX, tidOX2, tidOY, to, k, n, MPQN, MPQN1, MPQN4, MPQN28, sum<0-3>
+    98-124  ~ writeCs, readCs, alpha, beta, flags, tidOX, tidOX2, tidOX63, tidOY, to, k, n, MPQN, MPQN1, MPQN4, MPQN28, sum<0-3>
 
 </REGISTER_MAPPING>
 
@@ -283,7 +283,7 @@ LOOP:
 04:-:-:-:1      ISCADD k, blkF, tidOY, 6;
 --:-:-:-:1      IADD   k, k, param_offset_K;
 
-[+ output_setup() +]
+[+ output_setup(63) +]
 
 </SCHEDULE_BLOCK>
 
