--- a/neon/backends/kernels/sass/hconv_xprop_X64_N64.sass
+++ b/neon/backends/kernels/sass/hconv_xprop_X64_N64.sass
@@ -85,7 +85,7 @@
     74-75   : Out<0-1>
     76-95   : cs<0-7>, b<0-7>, c<0-3>
     96-97   : Sum<0-1>
-    98-125  ~ writeCs, readCs, alpha, beta, flags, tidOX, tidOY, to, k, n, MPQN, MPQN1, sum<0-3>
+    98-125  ~ writeCs, readCs, alpha, beta, flags, tidOX, tidOX63, tidOY, to, k, n, MPQN, MPQN1, sum<0-3>
 
 </REGISTER_MAPPING>
 
@@ -279,7 +279,7 @@ LOOP:
 04:-:-:-:1      ISCADD k, blkF, tidOY, 6;
 --:-:-:-:1      IADD   k, k, param_offset_K;
 
-[+ output_setup() +]
+[+ output_setup(63) +]
 
 </SCHEDULE_BLOCK>
 
