--- a/neon/backends/kernels/sass/sconv_xprop_X64_N128.sass
+++ b/neon/backends/kernels/sass/sconv_xprop_X64_N128.sass
@@ -76,7 +76,7 @@
     74-75   : Out<0-1>
     76-91   : cs<0-7>, b<0-7>
     92-93   : Sum<0-1>
-    94-124  ~ writeCs, readCs, alpha, beta, flags, tidOX, tidOX2, tidOY, to, k, n, MPQN, MPQN1, MPQN4, MPQN28, sum<0-3>
+    94-124  ~ writeCs, readCs, alpha, beta, flags, tidOX, tidOX2, tidOX63, tidOY, to, k, n, MPQN, MPQN1, MPQN4, MPQN28, sum<0-3>
 
 </REGISTER_MAPPING>
 
@@ -247,7 +247,7 @@ LOOP:
 04:-:-:-:1      ISCADD k, blkF, tidOY, 6;
 --:-:-:-:1      IADD   k, k, param_offset_K;
 
-[+ output_setup() +]
+[+ output_setup(31) +]
 
 </SCHEDULE_BLOCK>
 
