--- a/neon/backends/kernels/sass/hpool_avg.sass
+++ b/neon/backends/kernels/sass/hpool_avg.sass
@@ -22,41 +22,43 @@
     param_B[1]      : c[0x0][0x14c]
     param_I[0]      : c[0x0][0x150]
     param_I[1]      : c[0x0][0x154]
-    param_mode      : c[0x0][0x158]
-    param_N         : c[0x0][0x15c]
-    param_W         : c[0x0][0x160]
-    param_H         : c[0x0][0x164]
-    param_D         : c[0x0][0x168]
-    param_C         : c[0x0][0x16c]
-    param_WN        : c[0x0][0x170]
-    param_HWN       : c[0x0][0x174]
-    param_DHWN      : c[0x0][0x178]
-    param_P         : c[0x0][0x17c]
-    param_Q         : c[0x0][0x180]
-    param_magic_P   : c[0x0][0x184]
-    param_shift_P   : c[0x0][0x188]
-    param_QN        : c[0x0][0x18c]
-    param_PQN       : c[0x0][0x190]
-    param_MPQN      : c[0x0][0x194]
-    param_pad_j     : c[0x0][0x198]
-    param_pad_d     : c[0x0][0x19c]
-    param_pad_h     : c[0x0][0x1a0]
-    param_pad_w     : c[0x0][0x1a4]
-    param_str_j     : c[0x0][0x1a8]
-    param_str_d     : c[0x0][0x1ac]
-    param_str_h     : c[0x0][0x1b0]
-    param_str_w     : c[0x0][0x1b4]
-    param_S         : c[0x0][0x1b8]
-    param_RS        : c[0x0][0x1bc]
-    param_RST       : c[0x0][0x1c0]
-    param_JRST      : c[0x0][0x1c4]
-    param_magic_S   : c[0x0][0x1c8]
-    param_shift_S   : c[0x0][0x1cc]
-    param_magic_RS  : c[0x0][0x1d0]
-    param_shift_RS  : c[0x0][0x1d4]
-    param_magic_RST : c[0x0][0x1d8]
-    param_shift_RST : c[0x0][0x1dc]
-    param_overlap   : c[0x0][0x1e0]
+    param_alpha     : c[0x0][0x158]
+    param_beta      : c[0x0][0x15c]
+    param_mode      : c[0x0][0x160]
+    param_N         : c[0x0][0x164]
+    param_W         : c[0x0][0x168]
+    param_H         : c[0x0][0x16c]
+    param_D         : c[0x0][0x170]
+    param_C         : c[0x0][0x174]
+    param_WN        : c[0x0][0x178]
+    param_HWN       : c[0x0][0x17c]
+    param_DHWN      : c[0x0][0x180]
+    param_P         : c[0x0][0x184]
+    param_Q         : c[0x0][0x188]
+    param_magic_P   : c[0x0][0x18c]
+    param_shift_P   : c[0x0][0x190]
+    param_QN        : c[0x0][0x194]
+    param_PQN       : c[0x0][0x198]
+    param_MPQN      : c[0x0][0x19c]
+    param_pad_j     : c[0x0][0x1a0]
+    param_pad_d     : c[0x0][0x1a4]
+    param_pad_h     : c[0x0][0x1a8]
+    param_pad_w     : c[0x0][0x1ac]
+    param_str_j     : c[0x0][0x1b0]
+    param_str_d     : c[0x0][0x1b4]
+    param_str_h     : c[0x0][0x1b8]
+    param_str_w     : c[0x0][0x1bc]
+    param_S         : c[0x0][0x1c0]
+    param_RS        : c[0x0][0x1c4]
+    param_RST       : c[0x0][0x1c8]
+    param_JRST      : c[0x0][0x1cc]
+    param_magic_S   : c[0x0][0x1d0]
+    param_shift_S   : c[0x0][0x1d4]
+    param_magic_RS  : c[0x0][0x1d8]
+    param_shift_RS  : c[0x0][0x1dc]
+    param_magic_RST : c[0x0][0x1e0]
+    param_shift_RST : c[0x0][0x1e4]
+    param_overlap   : c[0x0][0x1e8]
 </CONSTANT_MAPPING>
 
 <REGISTER_MAPPING>
@@ -239,7 +241,6 @@ END_SETUP:
 --:-:-:-:1      ISETP.LT.AND P1, PT, jrst_1, lutSize, PT;
 --:-:-:-:1      ISETP.LT.AND P2, PT, jrst_2, lutSize, PT;
 --:-:-:-:0      ISETP.LT.AND P3, PT, jrst_3, lutSize, PT;
---:-:-:-:1      ISETP.NE.AND P4, PT, RZ, param_overlap, PT;
 --:-:-:-:1      LOP.AND.NZ P6, RZ, tid, 1;
 
 </SCHEDULE_BLOCK>
@@ -292,8 +293,8 @@ FPROP_LOOP:
 
 --:-:-:-:5  @P0 BRA.U FPROP_LOOP;
 
-20:-:-:-:2      FMUL sum, sum, lutSizeRcp;
-
+20:-:-:-:6      FMUL sum, sum, lutSizeRcp;
+--:-:-:-:2      FMUL sum, sum, param_alpha;
 --:-:1:-:2      F2F.F16.F32 sum, sum;
 
 01:-:-:-:1      STG.E.CG.U16 [Out], sum;
@@ -303,11 +304,9 @@ BPROP:
 
 10:-:1:-:2      F2F.F32.F16 bprop, bprop;
 
-21:-:-:-:2      FMUL bprop, bprop, lutSizeRcp;
-
+21:-:-:-:6      FMUL bprop, bprop, lutSizeRcp;
+--:-:-:-:2      FMUL bprop, bprop, param_alpha;
 --:-:5:-:1      F2F.F16.F32 bprop, bprop;
-
---:-:-:-:5  @P4 BRA.U OVERLAP;
 
 BPROP_LOOP:
 
@@ -340,48 +339,6 @@ BPROP_LOOP:
 --:-:-:-:0      IADD lutOffset, lutOffset, 16;
 
 --:-:-:-:5  @P0 BRA.U BPROP_LOOP;
-
---:-:-:-:5      BRA.U EXIT;
-
-// This code path is no longer used as it's too slow
-// Use the spool_bprop_avg kernel instead
-OVERLAP:
-
-10:-:-:-:1 @!P6 LOP32I.AND bprop, bprop, 0x0000ffff;
---:-:-:-:1  @P6 SHL        bprop, bprop, 16;
---:-:-:-:0  @P6 LOP32I.AND Back0, Back0, 0xfffffffc;
-
-OVERLAP_LOOP:
-
---:-:1:-:2      LDS.U.128 inOffset, [lutOffset];
-
-03:-:-:-:1  @P0 IADD   load0In0.CC, Back0, inOffset0;
---:-:-:-:5  @P0 IADD   jrst_0, jrst_0, 4;
---:-:-:-:2  @P0 IADD.X load0In1,    Back1, RZ;
---:2:-:-:1  @P0 RED.E.ADD.F16x2.FTZ.RN [load0In], bprop;
---:-:-:-:1      ISETP.LT.AND P0, PT, jrst_0, lutSize, PT;
-
-04:-:-:-:1  @P1 IADD   load1In0.CC, Back0, inOffset1;
---:-:-:-:5  @P1 IADD   jrst_1, jrst_1, 4;
---:-:-:-:2  @P1 IADD.X load1In1,    Back1, RZ;
---:3:-:-:1  @P1 RED.E.ADD.F16x2.FTZ.RN [load1In], bprop;
---:-:-:-:1      ISETP.LT.AND P1, PT, jrst_1, lutSize, PT;
-
-08:-:-:-:1  @P2 IADD   load2In0.CC, Back0, inOffset2;
---:-:-:-:5  @P2 IADD   jrst_2, jrst_2, 4;
---:-:-:-:2  @P2 IADD.X load2In1,    Back1, RZ;
---:4:-:-:1  @P2 RED.E.ADD.F16x2.FTZ.RN [load2In], bprop;
---:-:-:-:1      ISETP.LT.AND P2, PT, jrst_2, lutSize, PT;
-
-10:-:-:-:1  @P3 IADD   load3In0.CC, Back0, inOffset3;
---:-:-:-:5  @P3 IADD   jrst_3, jrst_3, 4;
---:-:-:-:2  @P3 IADD.X load3In1,    Back1, RZ;
---:5:-:-:1  @P3 RED.E.ADD.F16x2.FTZ.RN [load3In], bprop;
---:-:-:-:1      ISETP.LT.AND P3, PT, jrst_3, lutSize, PT;
-
---:-:-:-:0      IADD lutOffset, lutOffset, 16;
-
---:-:-:-:5  @P0 BRA.U OVERLAP_LOOP;
 
 EXIT:
 
