--- a/neon/backends/kernels/sass/hpool_bprop_avg.sass
+++ b/neon/backends/kernels/sass/hpool_bprop_avg.sass
@@ -21,53 +21,55 @@
     param_B[1]        : c[0x0][0x14c]
     param_I[0]        : c[0x0][0x150]
     param_I[1]        : c[0x0][0x154]
-    param_mode        : c[0x0][0x158]
-    param_N           : c[0x0][0x15c]
-    param_W           : c[0x0][0x160]
-    param_H           : c[0x0][0x164]
-    param_D           : c[0x0][0x168]
-    param_C           : c[0x0][0x16c]
-    param_WN          : c[0x0][0x170]
-    param_HWN         : c[0x0][0x174]
-    param_DHWN        : c[0x0][0x178]
-    param_magic_H     : c[0x0][0x17c]
-    param_shift_H     : c[0x0][0x180]
-    param_pad_w       : c[0x0][0x184]
-    param_pad_h       : c[0x0][0x188]
-    param_pad_d       : c[0x0][0x18c]
-    param_pad_c       : c[0x0][0x190]
-    param_str_w       : c[0x0][0x194]
-    param_str_h       : c[0x0][0x198]
-    param_str_d       : c[0x0][0x19c]
-    param_str_c       : c[0x0][0x1a0]
-    param_magic_str_w : c[0x0][0x1a4]
-    param_shift_str_w : c[0x0][0x1a8]
-    param_magic_str_h : c[0x0][0x1ac]
-    param_shift_str_h : c[0x0][0x1b0]
-    param_magic_str_d : c[0x0][0x1b4]
-    param_shift_str_d : c[0x0][0x1b8]
-    param_magic_str_c : c[0x0][0x1bc]
-    param_shift_str_c : c[0x0][0x1c0]
-    param_S           : c[0x0][0x1c4]
-    param_R           : c[0x0][0x1c8]
-    param_T           : c[0x0][0x1cc]
-    param_J           : c[0x0][0x1d0]
-    param_RS          : c[0x0][0x1d4]
-    param_RST         : c[0x0][0x1d8]
-    param_JRST        : c[0x0][0x1dc]
-    param_magic_S     : c[0x0][0x1e0]
-    param_shift_S     : c[0x0][0x1e4]
-    param_magic_RS    : c[0x0][0x1e8]
-    param_shift_RS    : c[0x0][0x1ec]
-    param_magic_RST   : c[0x0][0x1f0]
-    param_shift_RST   : c[0x0][0x1f4]
-    param_Q           : c[0x0][0x1f8]
-    param_P           : c[0x0][0x1fc]
-    param_M           : c[0x0][0x200]
-    param_K           : c[0x0][0x204]
-    param_QN          : c[0x0][0x208]
-    param_PQN         : c[0x0][0x20c]
-    param_MPQN        : c[0x0][0x210]
+    param_alpha       : c[0x0][0x158]
+    param_beta        : c[0x0][0x15c]
+    param_mode        : c[0x0][0x160]
+    param_N           : c[0x0][0x164]
+    param_W           : c[0x0][0x168]
+    param_H           : c[0x0][0x16c]
+    param_D           : c[0x0][0x170]
+    param_C           : c[0x0][0x174]
+    param_WN          : c[0x0][0x178]
+    param_HWN         : c[0x0][0x17c]
+    param_DHWN        : c[0x0][0x180]
+    param_magic_H     : c[0x0][0x184]
+    param_shift_H     : c[0x0][0x188]
+    param_pad_w       : c[0x0][0x18c]
+    param_pad_h       : c[0x0][0x190]
+    param_pad_d       : c[0x0][0x194]
+    param_pad_c       : c[0x0][0x198]
+    param_str_w       : c[0x0][0x19c]
+    param_str_h       : c[0x0][0x1a0]
+    param_str_d       : c[0x0][0x1a4]
+    param_str_c       : c[0x0][0x1a8]
+    param_magic_str_w : c[0x0][0x1ac]
+    param_shift_str_w : c[0x0][0x1b0]
+    param_magic_str_h : c[0x0][0x1b4]
+    param_shift_str_h : c[0x0][0x1b8]
+    param_magic_str_d : c[0x0][0x1bc]
+    param_shift_str_d : c[0x0][0x1c0]
+    param_magic_str_c : c[0x0][0x1c4]
+    param_shift_str_c : c[0x0][0x1c8]
+    param_S           : c[0x0][0x1cc]
+    param_R           : c[0x0][0x1d0]
+    param_T           : c[0x0][0x1d4]
+    param_J           : c[0x0][0x1d8]
+    param_RS          : c[0x0][0x1dc]
+    param_RST         : c[0x0][0x1e0]
+    param_JRST        : c[0x0][0x1e4]
+    param_magic_S     : c[0x0][0x1e8]
+    param_shift_S     : c[0x0][0x1ec]
+    param_magic_RS    : c[0x0][0x1f0]
+    param_shift_RS    : c[0x0][0x1f4]
+    param_magic_RST   : c[0x0][0x1f8]
+    param_shift_RST   : c[0x0][0x1fc]
+    param_Q           : c[0x0][0x200]
+    param_P           : c[0x0][0x204]
+    param_M           : c[0x0][0x208]
+    param_K           : c[0x0][0x20c]
+    param_QN          : c[0x0][0x210]
+    param_PQN         : c[0x0][0x214]
+    param_MPQN        : c[0x0][0x218]
 </CONSTANT_MAPPING>
 
 <REGISTER_MAPPING>
@@ -382,6 +384,7 @@ LOOP:
 
 --:-:-:-:5  @P0 BRA.U LOOP;
 
+--:-:-:-:2      FMUL sum, sum, param_alpha;
 --:-:1:-:2      F2F.F16.F32 sum, sum;
 
 01:-:-:-:1      STG.E.CG.U16 [Out], sum;
